2007-10-16  Mike Krüger <mkrueger@novell.com> 

	* Parser/Resolver.cs: fixed "Bug 325528 - Intellisense contains multiple
	  entries of same namespace".

2007-10-16  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.mdp, Parser/TypeNameResolver.cs, Makefile.am: Moved
	  TypeNameResolver to MD.Projects.

2007-10-15  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Fixed "Bug 333140 - Xml comment
	  generation only works when using "Smart" indentation".

2007-10-12  Mike Krüger <mkrueger@novell.com> 

	* CSharpBindingCompilerManager.cs: Applied changes that were neccassary for
	  to the new FileService.

2007-10-10  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpAmbience.cs: Always show parameter types.

2007-10-10  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpAmbience.cs: Properly show the method name for conversion operators.

2007-10-04  Zach Lute <zach.lute@gmail.com>

	* Parser/CSharpVisitor.cs: Added support for implicit/explicit operators as
	  methods. (Bug #330503)

2007-10-10  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpAmbience.cs: Formatting fixes.

2007-10-09  Mike Krüger <mkrueger@novell.com> 

	* CSharpAmbience.cs: Changed the C# ambience to recognize the new conversion
	  flags.

2007-10-09  Mike Krüger <mkrueger@novell.com> 

	* Parser/Parser.cs: Fixed "Bug 331772 - Unable to handle conditional class
	  definition".

2007-10-09  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Fixed "Bug 331000 - Auto-generation of
	  XML comment tags sometimes incorrect".

2007-10-09  Ankit Jain  <jankit@novell.com>

	* CSharpBindingCompilerManger.cs: Moved code for building resources to
	DotNetProject.

2007-10-08  Mike Krüger <mkrueger@novell.com> 

	* Parser/CodeGenerator.cs: fixed "Bug 325223 - Interface refactory doesn't
	  implement correctly (4 bugs)".

2007-10-08  Mike Krüger <mkrueger@novell.com> 

	* Parser/ExpressionFinder.cs: Worked on "Bug 330717 - Error while updating